--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "raml2html-material-theme",
-  "version": "1.1.0",
+  "version": "2.0.0-beta.0",
   "description": "A raml2html material design theme",
   "main": "index.js",
   "scripts": {
