--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "fs-extra": "^7.0.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.4",
+    "@angular-devkit/build-angular": "^0.12.3",
     "@angular/animations": "^7.1.4",
     "@angular/cdk": "^7.2.0",
     "@angular/cli": "~7.1.4",
