--- a/package.json
+++ b/package.json
@@ -29,38 +29,38 @@
   "author": "Korbinian Kuhn",
   "license": "MIT",
   "dependencies": {
-    "marked": "^0.5.2",
+    "marked": "^0.6.1",
     "fs-extra": "^7.0.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.3",
-    "@angular/animations": "^7.1.4",
-    "@angular/cdk": "^7.2.0",
-    "@angular/cli": "~7.1.4",
-    "@angular/common": "~7.1.4",
-    "@angular/compiler": "~7.1.4",
-    "@angular/compiler-cli": "~7.1.4",
-    "@angular/core": "~7.1.4",
-    "@angular/forms": "~7.1.4",
-    "@angular/http": "~7.1.4",
-    "@angular/language-service": "~7.1.4",
-    "@angular/material": "^7.2.0",
-    "@angular/platform-browser": "~7.1.4",
-    "@angular/platform-browser-dynamic": "~7.1.4",
-    "@angular/router": "~7.1.4",
-    "@types/node": "~10.12.18",
-    "codelyzer": "~4.5.0",
-    "core-js": "^2.6.1",
-    "highlight.js": "^9.13.1",
-    "jest": "^23.6.0",
-    "ngx-highlightjs": "^3.0.0",
-    "raml2html": "^7.2.1",
-    "rxjs": "~6.3.3",
+    "@angular-devkit/build-angular": "^0.13.6",
+    "@angular/animations": "^7.2.10",
+    "@angular/cdk": "^7.3.5",
+    "@angular/cli": "~7.3.6",
+    "@angular/common": "~7.2.10",
+    "@angular/compiler": "~7.2.10",
+    "@angular/compiler-cli": "~7.2.10",
+    "@angular/core": "~7.2.10",
+    "@angular/forms": "~7.2.10",
+    "@angular/http": "~7.2.10",
+    "@angular/language-service": "~7.2.10",
+    "@angular/material": "^7.3.5",
+    "@angular/platform-browser": "~7.2.10",
+    "@angular/platform-browser-dynamic": "~7.2.10",
+    "@angular/router": "~7.2.10",
+    "@types/node": "~11.11.7",
+    "codelyzer": "~5.0.0-beta.2",
+    "core-js": "<3.0.0",
+    "highlight.js": "^9.15.6",
+    "jest": "^24.5.0",
+    "ngx-highlightjs": "^3.0.3",
+    "raml2html": "^7.3.0",
+    "rxjs": "~6.4.0",
     "shx": "^0.3.2",
-    "ts-node": "~7.0.1",
-    "tslint": "~5.12.0",
-    "tslint-config-prettier": "^1.17.0",
-    "typescript": ">=3.1.1 <3.2",
-    "zone.js": "~0.8.26"
+    "ts-node": "~8.0.3",
+    "tslint": "~5.14.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "<3.3.0",
+    "zone.js": "~0.9.0"
   }
 }
