--- a/package.json
+++ b/package.json
@@ -29,38 +29,38 @@
   "author": "Korbinian Kuhn",
   "license": "MIT",
   "dependencies": {
-    "marked": "^0.6.1",
-    "fs-extra": "^7.0.1"
+    "marked": "^0.6.3",
+    "fs-extra": "^8.1.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.6",
-    "@angular/animations": "^7.2.10",
-    "@angular/cdk": "^7.3.5",
-    "@angular/cli": "~7.3.6",
-    "@angular/common": "~7.2.10",
-    "@angular/compiler": "~7.2.10",
-    "@angular/compiler-cli": "~7.2.10",
-    "@angular/core": "~7.2.10",
-    "@angular/forms": "~7.2.10",
-    "@angular/http": "~7.2.10",
-    "@angular/language-service": "~7.2.10",
-    "@angular/material": "^7.3.5",
-    "@angular/platform-browser": "~7.2.10",
-    "@angular/platform-browser-dynamic": "~7.2.10",
-    "@angular/router": "~7.2.10",
-    "@types/node": "~11.11.7",
-    "codelyzer": "~5.0.0-beta.2",
-    "core-js": "<3.0.0",
-    "highlight.js": "^9.15.6",
-    "jest": "^24.5.0",
+    "@angular-devkit/build-angular": "^0.801.0",
+    "@angular/animations": "^8.1.0",
+    "@angular/cdk": "^8.0.2",
+    "@angular/cli": "~8.1.0",
+    "@angular/common": "~8.1.0",
+    "@angular/compiler": "~8.1.0",
+    "@angular/compiler-cli": "~8.1.0",
+    "@angular/core": "~8.1.0",
+    "@angular/forms": "~8.1.0",
+    "@angular/http": "~7.2.15",
+    "@angular/language-service": "~8.1.0",
+    "@angular/material": "^8.0.2",
+    "@angular/platform-browser": "~8.1.0",
+    "@angular/platform-browser-dynamic": "~8.1.0",
+    "@angular/router": "~8.1.0",
+    "@types/node": "~12.0.12",
+    "codelyzer": "~5.1.0",
+    "core-js": "~3.1.4",
+    "highlight.js": "^9.15.8",
+    "jest": "^24.8.0",
     "ngx-highlightjs": "^3.0.3",
-    "raml2html": "^7.3.0",
-    "rxjs": "~6.4.0",
+    "raml2html": "^7.4.0",
+    "rxjs": "~6.5.2",
     "shx": "^0.3.2",
-    "ts-node": "~8.0.3",
-    "tslint": "~5.14.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~5.18.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "<3.3.0",
-    "zone.js": "~0.9.0"
+    "typescript": "^3.4.5",
+    "zone.js": "~0.9.1"
   }
 }
